k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: stroke-mlops
spec:
  selector:
    app: backend

  ports:
    - port: 8082
      targetPort: 8082

  type: ClusterIP
